Fixed spacing

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -252,6 +252,12 @@ footer {
   margin: 0 auto;
 }
 
+.experience-container:nth-child(1),
+.experience-container:nth-child(2),
+.experience-container:nth-child(3) {
+  margin-bottom: 50px;
+}
+
 .experience-image {
   width: 350px;
   height: auto;
@@ -275,7 +281,6 @@ footer {
   color: #333;
   flex: 1; 
   margin-right: 20px;
-  margin-bottom: 50px;
 }
 
 .experience-details {
